gitea/Service-gitea.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "3000"
    prometheus.io/scrape: "true"
  labels:
    app: gitea
    name: gitea
  name: gitea
  namespace: media
spec:
  ports:
  - name: gitea-server
    port: 3000
    targetPort: 3000
  - name: gitea-ssh
    port: 2222
    targetPort: 2222
  selector:
    name: gitea
