gitea/IngressRoute-gitea-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: gitea
  name: gitea-ingressroute
  namespace: media
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`git.danielramos.me`)
    services:
    - name: gitea
      port: 3000
  tls:
    certResolver: le
